# vg_case_study_data_analyst

./: Branch Performance.pbix  INSTRUCTIONS.md  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  onCreateCommand.sh
.devcontainer/bash/: .bashrc
docs/: Documentation
models/: sources.yml
models/marts/: accounts.csv  branches.csv  currencies.csv  customers.csv  fx_rates.csv  loans.csv  transactions.csv  transactions_eur.csv  transactions_eur.sql
models/staging/: stg_accounts.csv  stg_customers.csv  stg_fx_rates.csv  stg_loans.csv  stg_raw_staging__accounts.sql  stg_raw_staging__accounts.yml  stg_raw_staging__customers.sql  stg_raw_staging__customers.yml  stg_raw_staging__fx_rates.sql  stg_raw_staging__fx_rates.yml  stg_raw_staging__loans.sql  stg_raw_staging__loans.yml  stg_raw_staging__transactions.sql  stg_raw_staging__transactions.yml  stg_transactions.csv
src/varengold_data_analyst_case/: __init__.py
transformation/: .user.yml  dbt_project.yml  packages.yml  profiles.yml
transformation/analyses/: sample_loan_data.sql
transformation/macros/: data_cleaning_utils.sql  drop_table.sql  explore_db.sql  run_sql.sql  test_date_is_past.sql  test_numeric_range.sql
transformation/models/staging/: stg_raw_staging__accounts.sql  stg_raw_staging__accounts.yml  stg_raw_staging__customers.sql  stg_raw_staging__customers.yml  stg_raw_staging__fx_rates.sql  stg_raw_staging__fx_rates.yml  stg_raw_staging__loans.sql  stg_raw_staging__loans.yml  (+2 more)
transformation/seeds/: currencies.csv  stg_seed_staging__currencies.yml
