[project]
name = "varengold-data-analyst-case"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Victor Staack", email = "vstaack@varengold.de" }
]
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.3.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "rich>=14.0.0",
    "typer>=0.16.0",
]

[project.scripts]
varengold-data-analyst-case = "varengold_data_analyst_case:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
